bars/.config/eww/src/scss/notification-history/_notification-history.scss
.notification-scroller {
  min-height: 140px;

  .notification-history {
    margin: 1em 0em;
  }
}

.notification {
  font-family: "Roboto";
  background-color: $darker-background;
  border-radius: 10px;
  box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.55);

  margin-bottom: 1em;

  .notification-title {
    background-color: $background-secondary;
    padding: 0.95em 0em 0.75em;
    font-size: 14px;

    border-radius: 10px 10px 0px 0px;

    .notification-title-text {
      margin: 0em 0em 0em 1em;
      font-weight: 900;
    }

    .notification-close {
      margin: 0em 1em 0em 0em;
      color: $red;
    }
  }

  .notification-content {
    padding: 0.75em 0em;
    background-color: $background-primary;
  }
  .notification-body {
    padding: 0.75em 0em;
    font-size: 16px;
    // border: 1px solid green;
    .notification-body-text {
      margin: 0em 1rem;
    }
  }
  .notification-body-image {
    .notification-image {
      background-size: cover;
      background-repeat: no-repeat;
      border-radius: 8px;
      min-height: 128px;
      min-width: 128px;
      margin-left: 1em;
      // border: 2px solid red;

      // border: 2px solid $accent;
    }
  }
  .uc-LOW {
    background-color: $background-primary;
  }
  .uc-NORMAL {
    background-image: linear-gradient(45deg, $color6, $color4);
    background-color: $color6;
    color: $color0;
  }
  .uc-CRITICAL {
    background-image: linear-gradient(45deg, $color1, $color17);
    color: $color0;
  }
  .ut-NORMAL {
    background-color: $blue-desaturated;
    color: $color0;
  }
  .ut-CRITICAL {
    background-color: $color16;
    color: $color0;
  }
}

